# api/system/v1/resource_grpc.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
 // - protoc-gen-go-grpc v1.2.0
-// - protoc             v3.19.4
+// - protoc             v3.20.0
 // source: api/system/v1/resource.proto
 
 package v1
@@ -27,9 +27,10 @@ type ResourceClient interface {
 	DeleteMenu(ctx context.Context, in *IDsRequest, opts ...grpc.CallOption) (*EmptyReply, error)
 	GetMenuTree(ctx context.Context, in *EmptyRequest, opts ...grpc.CallOption) (*MenuReply, error)
 	GetMenuTreeByRole(ctx context.Context, in *IDRequest, opts ...grpc.CallOption) (*MenuReply, error)
+	ListMenu(ctx context.Context, in *ListRequest, opts ...grpc.CallOption) (*ListMenuReply, error)
 	GetRouteTree(ctx context.Context, in *EmptyRequest, opts ...grpc.CallOption) (*RouterReply, error)
 	GetRouteTreeByRole(ctx context.Context, in *IDRequest, opts ...grpc.CallOption) (*RouterReply, error)
-	EditRoutePolicy(ctx context.Context, in *RouterRequest, opts ...grpc.CallOption) (*EmptyReply, error)
+	ListRoute(ctx context.Context, in *ListRequest, opts ...grpc.CallOption) (*ListRouterReply, error)
 }
 
 type resourceClient struct {
@@ -85,6 +86,15 @@ func (c *resourceClient) GetMenuTreeByRole(ctx context.Context, in *IDRequest, o
 	return out, nil
 }
 
+func (c *resourceClient) ListMenu(ctx context.Context, in *ListRequest, opts ...grpc.CallOption) (*ListMenuReply, error) {
+	out := new(ListMenuReply)
+	err := c.cc.Invoke(ctx, "/api.system.v1.Resource/ListMenu", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 func (c *resourceClient) GetRouteTree(ctx context.Context, in *EmptyRequest, opts ...grpc.CallOption) (*RouterReply, error) {
 	out := new(RouterReply)
 	err := c.cc.Invoke(ctx, "/api.system.v1.Resource/GetRouteTree", in, out, opts...)
@@ -103,9 +113,9 @@ func (c *resourceClient) GetRouteTreeByRole(ctx context.Context, in *IDRequest, 
 	return out, nil
 }
 
-func (c *resourceClient) EditRoutePolicy(ctx context.Context, in *RouterRequest, opts ...grpc.CallOption) (*EmptyReply, error) {
-	out := new(EmptyReply)
-	err := c.cc.Invoke(ctx, "/api.system.v1.Resource/EditRoutePolicy", in, out, opts...)
+func (c *resourceClient) ListRoute(ctx context.Context, in *ListRequest, opts ...grpc.CallOption) (*ListRouterReply, error) {
+	out := new(ListRouterReply)
+	err := c.cc.Invoke(ctx, "/api.system.v1.Resource/ListRoute", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -121,9 +131,10 @@ type ResourceServer interface {
 	DeleteMenu(context.Context, *IDsRequest) (*EmptyReply, error)
 	GetMenuTree(context.Context, *EmptyRequest) (*MenuReply, error)
 	GetMenuTreeByRole(context.Context, *IDRequest) (*MenuReply, error)
+	ListMenu(context.Context, *ListRequest) (*ListMenuReply, error)
 	GetRouteTree(context.Context, *EmptyRequest) (*RouterReply, error)
 	GetRouteTreeByRole(context.Context, *IDRequest) (*RouterReply, error)
-	EditRoutePolicy(context.Context, *RouterRequest) (*EmptyReply, error)
+	ListRoute(context.Context, *ListRequest) (*ListRouterReply, error)
 	mustEmbedUnimplementedResourceServer()
 }
 
@@ -146,14 +157,17 @@ func (UnimplementedResourceServer) GetMenuTree(context.Context, *EmptyRequest) (
 func (UnimplementedResourceServer) GetMenuTreeByRole(context.Context, *IDRequest) (*MenuReply, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetMenuTreeByRole not implemented")
 }
+func (UnimplementedResourceServer) ListMenu(context.Context, *ListRequest) (*ListMenuReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ListMenu not implemented")
+}
 func (UnimplementedResourceServer) GetRouteTree(context.Context, *EmptyRequest) (*RouterReply, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetRouteTree not implemented")
 }
 func (UnimplementedResourceServer) GetRouteTreeByRole(context.Context, *IDRequest) (*RouterReply, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetRouteTreeByRole not implemented")
 }
-func (UnimplementedResourceServer) EditRoutePolicy(context.Context, *RouterRequest) (*EmptyReply, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method EditRoutePolicy not implemented")
+func (UnimplementedResourceServer) ListRoute(context.Context, *ListRequest) (*ListRouterReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ListRoute not implemented")
 }
 func (UnimplementedResourceServer) mustEmbedUnimplementedResourceServer() {}
 
@@ -258,6 +272,24 @@ func _Resource_GetMenuTreeByRole_Handler(srv interface{}, ctx context.Context, d
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Resource_ListMenu_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ResourceServer).ListMenu(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/api.system.v1.Resource/ListMenu",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ResourceServer).ListMenu(ctx, req.(*ListRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 func _Resource_GetRouteTree_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(EmptyRequest)
 	if err := dec(in); err != nil {
@@ -294,20 +326,20 @@ func _Resource_GetRouteTreeByRole_Handler(srv interface{}, ctx context.Context, 
 	return interceptor(ctx, in, info, handler)
 }
 
-func _Resource_EditRoutePolicy_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(RouterRequest)
+func _Resource_ListRoute_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListRequest)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(ResourceServer).EditRoutePolicy(ctx, in)
+		return srv.(ResourceServer).ListRoute(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/api.system.v1.Resource/EditRoutePolicy",
+		FullMethod: "/api.system.v1.Resource/ListRoute",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(ResourceServer).EditRoutePolicy(ctx, req.(*RouterRequest))
+		return srv.(ResourceServer).ListRoute(ctx, req.(*ListRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -340,6 +372,10 @@ var Resource_ServiceDesc = grpc.ServiceDesc{
 			Handler:    _Resource_GetMenuTreeByRole_Handler,
 		},
 		{
+			MethodName: "ListMenu",
+			Handler:    _Resource_ListMenu_Handler,
+		},
+		{
 			MethodName: "GetRouteTree",
 			Handler:    _Resource_GetRouteTree_Handler,
 		},
@@ -348,8 +384,8 @@ var Resource_ServiceDesc = grpc.ServiceDesc{
 			Handler:    _Resource_GetRouteTreeByRole_Handler,
 		},
 		{
-			MethodName: "EditRoutePolicy",
-			Handler:    _Resource_EditRoutePolicy_Handler,
+			MethodName: "ListRoute",
+			Handler:    _Resource_ListRoute_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
